--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.15.3",
     "babel-preset-stage-0": "^6.16.0",
     "babelify": "^7.3.0",
+    "blueimp-md5": "^2.6.0",
     "browserify": "^13.1.1",
     "bulma": "^0.2.3",
     "choo": "^4.0.3",
