--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "scripts": "browserify src/index.js -o dist/assets/bundle.js --debug --verbose -t babelify",
     "scripts/watch": "watchify src/index.js -o dist/assets/bundle.js --debug --verbose -t babelify",
-    "styles": "node-sass src/style.scss dist/assets/style.css --include-path node_modules",
+    "styles": "node-sass src/assets/sass/style.scss dist/assets/style.css --include-path node_modules",
     "styles/watch": "npm run styles -- -w",
     "dev": "mkdir -p dist/assets/ & cp index.html dist/index.html & npm run styles & npm run scripts/watch & npm run styles/watch & npm start",
     "start": "node server.js",
@@ -18,12 +18,11 @@
     "babelify": "^7.3.0",
     "blueimp-md5": "^2.6.0",
     "browserify": "^13.1.1",
-    "bulma": "^0.2.3",
+    "bulma": "^0.3.0",
     "choo": "^4.0.3",
     "choo-log": "^3.0.0",
     "jwt-decode": "^2.1.0",
     "live-server": "^1.1.0",
-    "material-components-web": "^0.1.1",
     "material-design-lite": "^1.3.0",
     "node-sass": "^4.1.1",
     "qs": "^6.3.0",
