--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "blueimp-md5": "^2.6.0",
     "browserify": "^13.1.1",
     "bulma": "^0.3.0",
+    "chai": "^3.5.0",
     "choo": "^4.0.3",
     "choo-log": "^3.0.0",
     "jwt-decode": "^2.1.0",
     "live-server": "^1.1.0",
     "material-design-lite": "^1.3.0",
+    "mocha": "^3.2.0",
     "node-sass": "^4.1.1",
     "qs": "^6.3.0",
     "validate.js": "^0.11.1",
