--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "scripts/watch": "watchify src/index.js -o dist/assets/bundle.js --debug --verbose -t babelify",
     "styles": "node-sass src/assets/sass/style.scss dist/assets/style.css --include-path node_modules",
     "styles/watch": "npm run styles -- -w",
-    "dev": "mkdir -p dist/assets/ & cp index.html dist/index.html & npm run styles & npm run scripts/watch & npm run styles/watch & npm start",
+    "dev": "npm run styles/watch & npm run serve",
     "start": "node server.js",
-    "build": "npm run scripts & npm run styles"
+    "build": "npm run scripts & npm run styles",
+    "serve": "budo src/index.js:assets/bundle.js --live --pushstate --host=localhost --port=8888 --dir=./dist/ -- -t babelify",
+    "fuck": "rm -rf node_modules && yarn cache clean && yarn install"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -18,11 +20,15 @@
     "babelify": "^7.3.0",
     "blueimp-md5": "^2.6.0",
     "browserify": "^13.1.1",
+    "budo": "^9.4.1",
     "bulma": "^0.3.0",
+    "cache-element": "^2.0.1",
     "chai": "^3.5.0",
     "choo": "^4.0.3",
+    "choo-component": "file:/Users/harry/Projects/choo-component",
     "choo-log": "^3.0.0",
     "jwt-decode": "^2.1.0",
+    "leaflet": "^1.0.2",
     "live-server": "^1.1.0",
     "material-design-lite": "^1.3.0",
     "mocha": "^3.2.0",
